# ray-tracer

./: CMakeLists.txt
src/: color.hpp  main.cpp  ray.cpp  ray.hpp  sphere.hpp  vec3.hpp
